<resources>
    <string name="handle_barrage">HandleBarrage</string>'
    <string name="sin_audio">SinAudio</string>
    <string name="bilibili">Bilibili</string>
    <string name="image_stitch">ImageStitching</string>
    <string name="ruler">Ruler</string>
    <string name="calculator">Calculator</string>
    <string name="compass">Compass</string>
    <string name="memorial_day">Memorial Day</string>

    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="searching">Searching</string>
    <string name="hold_on">Please Hold On</string>
    <string name="save_successfully">Save Successfully!</string>

    <string name="sin_audio_hint_head">Frequency(Hz): </string>
    <string name="sin_audio_hint">Drag to change frequency</string>

    <string name="handle_barrage_hint">please enter the barrage</string>
    <string name="handle_barrage_hint_size">text size</string>
    <string name="handle_barrage_static">Static</string>
    <string name="handle_barrage_scroll">Scrolling</string>
    <string name="handle_barrage_hint_speed">move speed</string>
    <string name="handle_barrage_text_color">text color</string>
    <string name="handle_barrage_back_color">back color</string>
    <string name="handle_barrage_show">SHOW</string>

    <string name="ruler_clear">Clear</string>
    <string name="ruler_correction">Correct</string>
    <string name="ruler_correction_confirm">Confirm</string>
    <string name="ruler_correction_cancel">Cancel</string>
    <string name="ruler_correction_zero_hint">You chose a invalid value</string>
    <string name="ruler_correction_hint">Length: </string>

    <string name="calculator_answer">ANS</string>
    <string name="calculator_formula">Enter</string>
    <string name="calculator_bad_hint">Bad formula</string>
    <string name="rad">rad</string>
    <string name="sin">sin</string>
    <string name="arc_sin">arcs</string>
    <string name="cos">cos</string>
    <string name="arc_cos">arcc</string>
    <string name="tan">t\an</string>
    <string name="arc_tan">arct</string>


    <string name="image_stitch_add">ADD</string>
    <string name="image_stitch_clear">CLR</string>
    <string name="image_stitch_mode">MODE</string>
    <string name="image_stitch_mode_horizontal">Horizontal</string>
    <string name="image_stitch_mode_vertical">Vertical</string>
    <string name="image_stitch_mode_lines">Lines</string>
    <string name="image_stitch_title">Stitch</string>
    <string name="image_stitch_size">Image Size</string>
    <string name="image_stitch_margin">Image Margin</string>
    <string name="image_stitch_background_color">Background Color</string>
    <string name="image_stitch_format">Format</string>
    <string name="image_stitch_line_height">Line Height</string>

    <string name="bilibili_hint">Please enter a BV number</string>
</resources>