<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView android:layout_width="match_parent"
               android:src="@mipmap/gray_bilibili"
               android:layout_height="0dp"
               android:layout_weight="30"
               android:id="@+id/image"/>
    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="0dp"
                  android:orientation="vertical"
                  android:layout_marginTop="@dimen/vertical_margin_mid"
                  android:layout_weight="20">
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/bilibili_hint"
                  style="@style/NormalEditText"
                  android:id="@+id/bv"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search"
                android:id="@+id/search"/>
        <Button android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginTop="@dimen/vertical_margin_sml"
                android:id="@+id/save"/>
    </LinearLayout>
</LinearLayout>