<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/vertical_margin_sml"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/container"
                 android:layout_weight="25"></FrameLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:text="@string/image_stitch_size"
              android:textAppearance="@style/AnnotationTextAppearance"
              android:layout_weight="2"/>
    <SeekBar android:layout_width="match_parent"
             android:layout_height="0dp"
             android:progress="100"
             android:max="100"
             android:id="@+id/size"
             android:layout_weight="3"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:textAlignment="center"
              android:text="@string/image_stitch_line_height"
              android:textAppearance="@style/AnnotationTextAppearance"
              android:layout_weight="2"/>
    <SeekBar android:layout_width="match_parent"
             android:layout_height="0dp"
             android:max="100"
             android:id="@+id/height"
             android:layout_weight="3"/>
    <Button android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/vertical_margin_sml"
            android:background="@color/light_gray"
            android:id="@+id/save"
            android:layout_weight="3"
            android:text="@string/save"/>
</LinearLayout>