<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:id="@+id/container"
                 android:background="@color/black"
                 android:layout_weight="20"></FrameLayout>
    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:text="@string/image_stitch_size"
              android:textAppearance="@style/AnnotationTextAppearance"
              android:layout_weight="2"/>
    <SeekBar android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/size"
             android:layout_weight="3"/>
    <TextView android:layout_width="match_parent"
              android:layout_height="0dp"
              android:text="@string/image_stitch_margin"
              android:textAppearance="@style/AnnotationTextAppearance"
              android:layout_weight="2"/>
    <SeekBar android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/margin"
             android:layout_weight="3"/>
    <Button android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/back_color"
            android:layout_weight="3"
            android:text="@string/image_stitch_background_color"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/vertical_margin_mid"
            android:layout_weight="3">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/format"
                android:text="@string/image_stitch_format"
                android:textAppearance="@style/AnnotationTextAppearance"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/textView2"></TextView>
        <Spinner
                android:layout_width="@dimen/spinner_width"
                android:layout_height="@dimen/spinner_height"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:visibility="visible"
                android:id="@+id/format"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="@dimen/spinner_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView2"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>