<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:layout_height="match_parent">
    <SeekBar
            android:layout_width="1500px"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:max="1500"
            android:id="@+id/correction_length"></SeekBar>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/bottom_margin"
            android:layout_marginEnd="@dimen/bottom_margin"
            android:layout_gravity="top|end"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/spinner"
                android:text="@string/ruler_correction_hint"
                android:textAppearance="@style/AnnotationTextAppearance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/spinner"
                app:layout_constraintBottom_toBottomOf="parent"></TextView>
        <Spinner
                android:layout_width="@dimen/spinner_width"
                android:layout_height="@dimen/spinner_height"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:visibility="visible"
                android:id="@+id/spinner"
                android:spinnerMode="dropdown"
                android:dropDownVerticalOffset="@dimen/spinner_height" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/bottom_margin"
            android:layout_marginEnd="@dimen/bottom_margin">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/vertical_margin_sml"
                android:text="@string/ruler_correction_cancel"
                android:id="@+id/ruler_correction_cancel"></Button>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruler_correction_confirm"
                android:layout_toRightOf="@id/ruler_correction_cancel"
                android:id="@+id/ruler_correcttion_confirm"></Button>
    </RelativeLayout>
</FrameLayout>