<?xml version="1.0" encoding="utf-8"?>
<!--这里定义着科学计算器的界面,使用gridlayout,也是定义多按钮界面常用的界面布局法-->
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scientific_calculator"
            android:rowCount="9"
            android:columnCount="5">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/calculator_text_height"
            android:id="@+id/sci_text"
            android:text="@string/calculator_formula"
            android:textSize="@dimen/calculator_text_sml_size"
            android:textIsSelectable="true"
            android:layout_margin="@dimen/calculator_margin"
            android:layout_columnSpan="5"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/calculator_text_sml_height"
            android:id="@+id/sci_ans"
            android:text="@string/calculator_answer"
            android:textSize="@dimen/calculator_text_big_size"
            android:textIsSelectable="true"
            android:gravity="right"
            android:layout_margin="@dimen/calculator_margin"
            android:layout_columnSpan="5"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_2nd"
            android:text="2nd"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/rad"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_sin"
            android:text="@string/sin"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_cos"
            android:text="@string/cos"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_tan"
            android:text="@string/tan"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_pow"
            android:text="^"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_lg"
            android:text="lg"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_ln"
            android:text="\ln"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_left"
            android:text="\("
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textColor="@color/black"
        android:layout_margin="@dimen/calculator_margin"
        android:id="@+id/sci_right"
        android:text="\)"
        android:textSize="@dimen/calculator_button_sml"
        android:layout_columnWeight="1"
        android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_root"
            android:text="√"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_ac"
            android:text="AC"
            android:textSize="@dimen/calculator_button_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_del"
            android:text="DEL"
            android:textSize="@dimen/calculator_button_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_mod"
            android:text="%"
            android:textSize="@dimen/calculator_button_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_mut"
            android:text="x"
            android:textSize="@dimen/calculator_button_mid"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_fac"
            android:text="\!"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_7"
            android:text="7"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_8"
            android:text="8"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_9"
            android:text="9"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_div"
            android:text="÷"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:textColor="@color/black"
            android:id="@+id/sci_rec"
            android:text="1/x"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_4"
            android:text="4"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_5"
            android:text="5"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_6"
            android:text="6"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_sub"
            android:text="-"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_pai"
            android:text="pai"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_1"
            android:text="1"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_2"
            android:text="2"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_3"
            android:text="3"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
    />
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_add"
            android:text="+"
            android:textSize="@dimen/calculator_button_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textColor="@color/black"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_e"
            android:text="e"
            android:textSize="@dimen/calculator_button_sml"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_0"
            android:text="0"
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1" />
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_point"
            android:text="."
            android:textSize="@dimen/calculator_button_size"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>
    <Button
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/calculator_margin"
            android:id="@+id/sci_equ"
            android:text="="
            android:textSize="@dimen/calculator_button_size"
            android:layout_gravity="fill"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"/>

</GridLayout>